# QtServoterm

./: .gitignore  CMakeLists.txt  README.md  servoterm.pro
.github/workflows/: cmake.yml
src/: Actions.cpp  Actions.h  AppendTextToEdit.h  ClickableComboBox.cpp  ClickableComboBox.h  ConfigDialog.cpp  ConfigDialog.h  HistoryLineEdit.cpp  HistoryLineEdit.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  Oscilloscope.cpp  Oscilloscope.h  OscilloscopeChart.cpp  OscilloscopeChart.h  ScopeDataDemux.cpp  ScopeDataDemux.h  SerialConnection.cpp  SerialConnection.h  XYOscilloscope.cpp  XYOscilloscope.h  globals.h  main.cpp
